force-app/main/default/objects/Followup__c/Followup__c.object-meta.xml
<CustomObject>
    <description>Follow-up activity for leads</description>
    <label>Follow-up</label>
    <nameField>
        <displayFormat>FU-{00000}</displayFormat>
        <label>Follow-up ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Follow-ups</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>