force-app/main/default/objects/Followup__c/fields/Assigned_To__c.field-meta.xml
<CustomField>
    <fullName>Assigned_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned To</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Assigned Followups</relationshipLabel>
    <relationshipName>Assigned_Followups</relationshipName>
    <type>Lookup</type>
</CustomField>