force-app/main/default/objects/Followup__c/validationRules/Cancelled_Reason.validationRule-meta.xml
<ValidationRule>
    <fullName>Cancelled_Reason</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISPICKVAL(Status__c, &quot;Cancelled&quot;),
    OR(
        ISBLANK(Cancelled_Reason__c),
        ISBLANK(Cancelled_Date__c)
    )
)</errorConditionFormula>
    <errorMessage>Please fill Cancelled Reason and Cancelled Date when Status is Cancelled.</errorMessage>
</ValidationRule>