force-app/main/default/objects/Followup__c/validationRules/completed_date_and_remarks_mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>completed_date_and_remarks_mandatory</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISPICKVAL(Status__c, &quot;Completed&quot;),
    OR(
        ISBLANK(Completed_Date__c),
        ISBLANK(Feedback__c)
    )
)</errorConditionFormula>
    <errorMessage>Completed Date and Feedback are required when Status is Completed.</errorMessage>
</ValidationRule>