force-app/main/default/objects/Followup__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Assigned_To__c</columns>
    <columns>Lead__c</columns>
    <columns>Status__c</columns>
    <columns>Notes__c</columns>
    <columns>Due_Date__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>